Stage 1 eval, adding appendices

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -69,7 +69,7 @@ Before taking part in the two scenarios, participants were given the opportunity
 
 \subsection{Evaluation Techniques}
 
-The comparison of the traditional scenario against the PR scenario included collection of a variety of both qualitative \& quantitative data. All participants completed a pre-task questionnaire which provided calibration for latter data by enquiring about age, gender identity, previous experience with VR HMDs \& whether they had previously visited St Salvtor's chapel, both RW \& VR (the RW chapel is open to the public \& a version of the VR reconstruction is publicly accessible via the OVW group's OpenSim grid\footnote{\url{openvirtualworlds.org}}). The System Usability Scale (SUS)~\cite{Brooke1996} was used to provide a basic comparison between the usability of the two scenarios, while a 12-item Likert-type questionnaire (included as appendix \ref{appendix-12-item-likert-type-questionnaire-stage-1}) was used to collect opinions on more specific aspects of the experience of both scenarios. At the end of the session, participants were engaged in a short structured interview (prompts included as appendix \ref{appendix-interview-questions-stage-1}) in order to allow them to elaborate upon their experience in a more free form manner. Finally, in addition to the DK1 visuals being recorded via ShadowPlay, log data were collected during both scenarios, capturing the information detailed in table \ref{logdatatable} to a tab separated variable (\texttt{.tsv}) file for each frame rendered to the DK1's screen.
+The comparison of the traditional scenario against the PR scenario was facilitated by the collection of a variety of both qualitative \& quantitative data. All participants completed a pre-task questionnaire which provided calibration for latter data by enquiring about age, gender identity, previous experience with VR HMDs \& whether they had previously visited St Salvtor's chapel, both RW \& VR (the RW chapel is open to the public \& a version of the VR reconstruction is publicly accessible via the OVW group's OpenSim grid\footnote{\url{openvirtualworlds.org}}). The System Usability Scale (SUS)~\cite{Brooke1996} was used to provide a basic comparison between the usability of the two scenarios, while a 12-item Likert-type questionnaire (included as appendix \ref{appendix-12-item-likert-type-questionnaire-stage-1}) was used to collect opinions on more specific aspects of the experience of both scenarios. At the end of the session, after completing both scenarios, participants were engaged in a short structured interview (prompts included as appendix \ref{appendix-interview-questions-stage-1}) in order to allow them to elaborate upon their experience in a more free form manner. Finally, in addition to the DK1 visuals being recorded via ShadowPlay, log data were collected during both scenarios, capturing the information detailed in table \ref{logdatatable} to file for each frame rendered to the DK1's screen.
 
 \begin{center}
 \begin{longtable}{| l | p{8cm} |}
@@ -80,7 +80,7 @@ The comparison of the traditional scenario against the PR scenario included coll
 
 \hline
 
-\texttt{<frame number>} & Incremented with each frame pushed to the DK1, starting at 0 when the Unity application is fun. \\
+\texttt{<frame number>} & Incremented with each frame pushed to the DK1, starting at 0 when the Unity application is run. \\
 
 \hline
 
@@ -96,15 +96,15 @@ The comparison of the traditional scenario against the PR scenario included coll
 
 \hline
 
-\texttt{<delta\_x>} \& \texttt{<delta\_z>} & The difference in the \texttt{x} \& \texttt{z} axes between \texttt{<original\_position>} \& \texttt{<position>} on this frame. Change in elevation (\texttt{y} axis) is not recorded, as IndoorAtlas does not provide elevation data \& the area of St Salvator's chapel used throughout the studies is largely level. \\
+\texttt{<delta\_x>} \& \texttt{<delta\_z>} & The difference in the \texttt{x} \& \texttt{z} axes between \texttt{<original\_position>} \& \texttt{<position>} on this frame. Change in elevation (\texttt{y} axis) is not recorded, as IndoorAtlas does not provide elevation data \& the area of St Salvator's chapel used throughout the studies is level. \\
 
 \hline
 
-\texttt{<left\_rotation>} \& \texttt{<right\_rotation>} & The orientations as Unity \texttt{Quaternion} of the two Unity camera game objects. The orientation of these Unity objects is tied to the orientation of the DK1, so these values represent the orientation of the participant's head on this particular frame. \\
+\texttt{<left\_rotation>} \& \texttt{<right\_rotation>} & The orientations as Unity \texttt{Quaternion} of the two Unity camera game objects. The orientation of these Unity objects is tied to the orientation of the DK1, so these values represent the orientation of the participant's head on each frame. \\
 
 \hline
 
-\texttt{<base\_oapcity>} & The maximum opacity of the game objects upon which the camera feeds are rendered. This is how reduced maximum opacity (see section \ref{subsub-baseopacity}) is implemented. \\
+\texttt{<base\_oapcity>} & The maximum opacity of the game objects upon which the camera feeds are rendered. This is how reduced maximum opacity (see section \ref{subsub-baseopacity}) is implemented (by setting this field to a value \textless 1). \\
 
 \hline
 
@@ -158,7 +158,7 @@ The comparison of the traditional scenario against the PR scenario included coll
 
 \subsection{Hypotheses}
 \label{stage1hypotheses}
-This first stage of evaluation was designed to ascertain whether applying mobile PR to a cultural heritage scenario results in an improvement in participant engagement with \& understanding of the relationships between the RW \& VR environments, compared to a traditional virtual heritage scenario, by addressing the problems of spatial \& temporal separation inherent with the traditional scenario by imparting upon the participant the ability to transition at will between equivalent vantage points within the RW \& VR environments.
+This first stage of evaluation was designed to ascertain whether applying mobile PR to a cultural heritage scenario results in an improvement in participant engagement with \& understanding of the relationships between the RW \& VR environments, compared to a traditional virtual heritage scenario. Such improvements were expected to result from addressing the problems of spatial \& temporal separation inherent with the traditional scenario by imparting upon the participant the ability to transition at will between equivalent vantage points within the RW \& VR environments.
 
 Overall participants were expected to report that the PR scenario did allow them to better compare \& contrast the RW \& VR environments, identify differences between the RW \& VR environments \& gain a better understanding of how the RW \& VR environments relate to each other. However it was also expected that some participants would report that having to `split' their attention between the two environments in the PR scenario led to lessened engagement \& understanding \& that the visual quality of the RW view through the cameras led to them preferring the traditional scenario.
 
@@ -167,12 +167,11 @@ It was expected that the cumbersome nature of the PR scenario in terms of the ha
 The 12-item Likert-type questionnaire was expected to reveal several distinctions. In particular;
 \begin{itemize}
 	\item Participants will find it easier to compare \& contrast RW \& VR environments in the PR scenario than in the traditional scenario (q2)
-	\item Participants will experience a greater  sense of `being there' the VR environment in the PR scenario than in the traditional scenario, due to physical movement/embodiment~\cite{Groten2011} (q4)
+	\item Participants will experience a greater  sense of `being there' in the VR environment in the PR scenario than in the traditional scenario, due to physical movement/embodiment~\cite{Groten2011} (q4)
 	\begin{itemize}
 		\item Furthermore, participants will have a greater sense of `being in the past' in the PR scenario than in the traditional scenario (q7)
 	\end{itemize}
 	\item Participants will maintain greater awareness of both RW \& VR environments in the PR scenario than in the traditional scenario (q5)
-	\item Participants will notice more differences between RW \& VR environments in the PR scenario than in the traditional scenario (q10)	
 	\item Participants will gain a better understanding of what the chapel was like in the past in the PR scenario than in the traditional scenario (q12)
 \end{itemize}
 
@@ -235,9 +234,7 @@ One participant did not complete the Likert-type questionnaires. Coincidentally 
 	\item Participants felt that they better understood what the chapel was like in the past after the PR scenario, compared to the traditional scenario (q12)
 \end{itemize}
 
-These results largely confirm the hypotheses from section \ref{stage1hypotheses}, with the exception of the hypothesis relating to question 10: that participants would notice more differences between RW \& VR environments in the PR scenario than in the traditional scenario. Responses to question 10 were equal for both scenarios, implying that participants did not perceive in hindsight having noticed more differences between RW \& VR environments in one scenario than the other. However, participant responses to both questions 9 \& 12 indicate that nonetheless they came away with a further changed understanding of the chapel \& a better understanding of what the chapel was like in the past after the PR scenario than after the traditional scenario. Thus while participants did not remember noticing more discrete differences between the two environments in one scenario compared to the other, the overall understanding of the environments \& what the chapel was like in the past was better after the PR scenario than after the traditional scenario.
-
-It is also worth noting that although the PR scenario scored lower than the traditional scenario in SUS, both scenarios scored highly in question 2 (\textit{``It was easy to compare features from the past \& the present''}) \& low in question 8 (\textit{``I would have preferred a conventional computer monitor''}).
+These results largely confirm the hypotheses from section \ref{stage1hypotheses}. It is also worth noting that although the PR scenario scored lower than the traditional scenario in SUS, both scenarios scored highly in question 2 (\textit{``It was easy to compare features from the past \& the present''}) \& low in question 8 (\textit{``I would have preferred a conventional computer monitor''}).
 
 %=========================================================================================================
 
@@ -245,15 +242,15 @@ It is also worth noting that although the PR scenario scored lower than the trad
 
 Studying the structured interviews that took place after participants had completed both scenarios (interviews were recorded \& subsequently transcribed) provided a wealth of qualitative feedback about the stage 1 investigation.
 
-All participants said that the PR scenario was (much) more engaging than the traditional scenario, even though 2x participants said that they preferred the traditional scenario. Of those that said they preferred the traditional scenario, one did not find it comfortable to walk while wearing the DK1 \& the other reported gaining a better understanding of the past from the traditional scenario. The participant who found it uncomfortable to walk while wearing the DK1 was notably taller than all of the other participants in this stage. This is worth mentioning as the `height' of the virtual cameras in the VR reconstruction was fixed with reference to the UK average height of 5 feet 9 inches \& was not changed to account for different participant heights, as this would have required a lengthy calibration phase for each \& every participant. Thus for a participant of average height, the discrepancy between their RW viewpoint \& their VR viewpoint was minimal, however for a particularly short or tall participant this discrepancy would have been much worse \& may have contributed to the discomfort of walking with the DK1 as each transition between RW \& VR would have resulted in a perceptible shift in height. Those that said that the preferred the PR scenario alluded to the immediacy of comparison between RW \& VR afforded by it as a contributing factor.
+All participants said that the PR scenario was (much) more engaging than the traditional scenario, even though 2x participants said that they preferred the traditional scenario. Of those that said they preferred the traditional scenario, one did not find it comfortable to walk while wearing the DK1 \& the other reported gaining a better understanding of the past from the traditional scenario. The participant who found it uncomfortable to walk while wearing the DK1 was notably taller than all of the other participants in this stage. This is worth mentioning as the `height' of the virtual cameras in the VR reconstruction was fixed with reference to the UK average height of 5 feet 9 inches \& was not changed to account for different participant heights, as this would have required a lengthy calibration phase for each \& every participant. Thus for a participant of average height, the discrepancy between their RW viewpoint \& their VR viewpoint was minimal, however for a particularly short or tall participant this discrepancy would have been much worse \& may have contributed to the discomfort of walking with the DK1 as each transition between RW \& VR would have resulted in a perceptible shift in height. Those that said that they preferred the PR scenario alluded to the immediacy of comparison between RW \& VR afforded by it as a contributing factor.
 
-Twice as many participants reported that the PR scenario made it easier to spot differences between RW \& VR as reported that the traditional scenario made it easier, with 4 out of 6 participants reporting noticing differences between RW \& VR in the PR scenario that they did not notice in the traditional scenario. In particular, the different position of the rood screen was mentioned by several participants \& one participant was able to list multiple differences that s/he had spotted in the PR scenario that they had not noticed in the traditional scenario. One participant directly mentioned then confirmed that immediacy of comparison between RW \& VR was the enabler of spotting more differences, another mentioned that with the traditional scenario it was not clear that you were \textit{``trying to look into the past''} but in the PR scenario it was obvious because \textit{``you can see the differences''}, while another directly said that s/he preferred the PR scenario because \textit{``it was easier to compare \& contrast between the real world \& the virtual one''}. Despite this seeming superiority of the PR scenario when it comes to spotting differences between the two environments, question 8 of the Likert-type questionnaires does not seem to mirror this relationship, as both scenarios scored almost equally well with the PR scenario coming out slightly worse, where a larger difference would have been expected from hearing the interview responses.
+Twice as many participants reported that the PR scenario made it easier to spot differences between RW \& VR as reported that the traditional scenario made it easier, with 4 out of 6 participants reporting noticing differences between RW \& VR in the PR scenario that they did not notice in the traditional scenario. In particular, the different position of the rood screen was mentioned by several participants \& one participant was able to list multiple differences that s/he had spotted in the PR scenario that they had not noticed in the traditional scenario. One participant directly mentioned then confirmed that immediacy of comparison between RW \& VR was the enabler of spotting more differences, another mentioned that with the traditional scenario it was not clear that you were \textit{``trying to look into the past''} but in the PR scenario it was obvious because \textit{``you can see the differences''}, while another directly said that s/he preferred the PR scenario because \textit{``it was easier to compare \& contrast between the real world \& the virtual one''}.
 
-The quality of the cameras was mentioned as a possible detractor by one of the participants who answered that the traditional scenario made it easier, with another participant specifically mentioning that a higher \textit{``resolution''} was needed.
+The quality of the cameras was mentioned as a possible detractor by one of the participants who answered that the traditional scenario made it easier to spot differences between RW \& VR, with another participant specifically mentioning that a higher \textit{``resolution''} was needed.
 
 The one participant to report experiencing motion sickness elaborated that it was worse when using the DK1 in the traditional scenario than when walking with the DK1 in the PR scenario, because \textit{``sitting down \& moving around feels weird''} (a reference to moving throughout the VR environment using the Xbox controller whilst physically stationary sitting on a chair). This observation alludes to the idea of physical embodiment/movement improving a VR experience, by demonstrating the opposite position of restricted movement \& a lack of matching embodiment worsening the VR experience.
 
-With regards to movement in the PR scenario, the accuracy \& especially the lag of the indoor positioning was cited by one participant as needing work, because it \textit{``caught me off guard twice''}. From watching the ShadowPlay recorded videos from the PR scenario, it is clear that in many cases the participants would trigger a transition to VR visual stimuli only to find that their VR position had not `caught up' with their RW position.
+With regards to movement in the PR scenario, the accuracy \& especially the lag of the indoor positioning was cited by one participant as needing work, because it \textit{``caught me off guard twice''}. From watching the ShadowPlay recorded videos from the PR scenario, it is clear that in many cases the participants would trigger a transition to VR visual stimuli only to find that their VR position had not yet `caught up' with their RW position.
 
 %=========================================================================================================
 
@@ -287,7 +284,7 @@ When looking at either scenario's data (the VR section of the traditional scenar
 	\end{center}
 \end{figure}
 
-This relationship is also evident when calculating the standard deviation in pitch \& yaw across both scenarios, shown by table \ref{sdpitchyawtrad} for the traditional scenario \& table \ref{sdpitchyawpr} for the PR scenario. For every participant for which the data are available, the standard deviation in yaw is substantially higher than that in pitch. This relationship can largely be explained by the simple fact that there is more to observe in the chapel(s) at ground level than above eye level or upon the ground, however with the marked difference in the appearance of the chapel roof (stone in the VR reconstruction, wood in the RW chapel today) a smaller difference between pitch \& yaw variance might have been expected for both scenarios.
+This relationship is reflected calculating the standard deviation in pitch \& yaw across both scenarios, shown by table \ref{sdpitchyawtrad} for the traditional scenario \& table \ref{sdpitchyawpr} for the PR scenario. For every participant for which the data are available, the standard deviation in yaw is substantially higher than that in pitch. This relationship can largely be explained by the simple fact that there is more to observe in the chapel(s) at ground level than above eye level or upon the ground, however with the marked difference in the appearance of the chapel roof (stone in the VR reconstruction, wood in the RW chapel today) a smaller difference between pitch \& yaw variance might have been expected for both scenarios.
 
 \begin{table}
 \begin{center}
@@ -354,7 +351,7 @@ This relationship is also evident when calculating the standard deviation in pit
 
 \hline
 \end{tabular}
-\caption{Standard deviation in pitch \& yaw for PR scenario (both RW \& VR periods).}
+\caption{Standard deviation in pitch \& yaw for PR scenario (RW \& VR periods combined).}
 \label{sdpitchyawpr}
 \end{center}
 \end{minipage}
@@ -389,7 +386,7 @@ As can be seen in figure \ref{3_pitch_yaw.png} this relationship is even more pr
 	\end{center}
 \end{figure}
 
-Calculating the mean standard deviation in yaw for both RW \& VR periods, weighted by the duration of the periods, shows this relationship more accurately. With reference to the figures in table \ref{sdyawtab} the mean standard deviation in yaw while perceiving VR stimuli is substantially higher than while perceiving RW stimuli for participant 1 (39.887\textdegree\ compared to 25.545\textdegree) \& for participant 3 (60.636\textdegree\ compared to 11.702\textdegree). The values are close for participant 5, due to the initial large delta in yaw just before the first transition into VR at around 130 seconds. Recalculating the mean standard deviation from 150 seconds onwards to exclude this peak gives rise to the values of 36.074\textdegree\ for VR stimuli compared to 17.046\textdegree\ for RW stimuli, which is more in fitting with the impressions drawn from studying figure \ref{5_pitch_yaw.png}. The exception to this observation is participant 4, however this participant displayed very restricted head movement throughout both scenarios when compared to the other participants.
+Calculating the mean standard deviation in yaw for both RW \& VR periods, weighted by the duration of the periods, shows this relationship more accurately. With reference to the figures in table \ref{sdyawtab} the mean standard deviation in yaw while perceiving VR stimuli is higher than while perceiving RW stimuli for participant 1 (39.887\textdegree\ compared to 25.545\textdegree) \& even more so for participant 3 (60.636\textdegree\ compared to 11.702\textdegree). The values are closer for participant 5, due to the initial large delta in yaw just before the first transition into VR at around 130 seconds. Recalculating the weighted mean standard deviation from 150 seconds onwards to exclude this peak gives rise to the values of 36.074\textdegree\ for VR stimuli compared to 17.046\textdegree\ for RW stimuli, which is more in fitting with the impressions drawn from studying figure \ref{5_pitch_yaw.png}. The exception to this observation is participant 4, however this participant displayed very restricted head movement throughout both scenarios when compared to the other participants.
 
 \begin{table}
 \begin{center}
@@ -463,7 +460,7 @@ Calculating the mean standard deviation in yaw for both RW \& VR periods, weight
 \end{center}
 \end{table}
 
-Furthermore, comparing yaw from the VR periods of the PR scenario (table \ref{sdyawtab}) against yaw from the traditional scenario (table \ref{sdpitchyawtrad}) it can be seen that in most cases there is a noticeably less yaw change in the VR periods of the PR scenario than in the traditional scenario, leading to the conclusion that participants felt more comfortable to perform larger head movements when seated with the DK1 than when standing/walking with the DK1. Observations of participants while they performed the traditional scenario supports this with several participants twisting their heads right around to look behind them without changing their direction of their virtual `movement', while when walking in the PR scenario they tended to largely look ahead \& perform larger orientation changes by instead turning their whole body to begin walking in the return direction.
+Furthermore, comparing yaw from the VR periods of the PR scenario (table \ref{sdyawtab}) against yaw from the traditional scenario (table \ref{sdpitchyawtrad}) it can be seen that in most cases there is a noticeably less yaw change in the VR periods of the PR scenario than in the traditional scenario, leading to the conclusion that participants felt more comfortable to perform larger head movements when seated with the DK1 than when standing/walking with the DK1. Observations of participants while they performed the traditional scenario support this with several participants twisting their heads right around to look behind them without changing their direction of their virtual `movement', while when walking in the PR scenario they tended to largely look ahead \& perform larger orientation changes by instead turning their whole body to begin walking in the return direction.
 
 Further comparing head movements between the VR section of the traditional scenario \& the VR periods of the PR scenario, the difference between the magnitude of pitch \& yaw is greater in the VR section of the traditional scenario than in the VR periods of the PR scenario. Comparing these values from tables \ref{sdpitchyawtrad}, \ref{sdpitchyawpr} \& \ref{sdpitchyawtrad} this difference exhibits as smaller variance in yaw \& roughly unchanged (only slight increased) variance in pitch for the VR periods of the PR scenario, further indicating that participants were more comfortable to look around themselves more freely in the traditional scenario than the PR scenario, leading to less overall head movement in the PR scenario than the traditional scenario.
 
@@ -499,7 +496,7 @@ Finally, when considering the amount of time spent perceiving each environment i
 
 \section{Stage 1 Conclusions}
 
-In general, participant reaction to the Mirrorshades platform met the hypotheses. From the questionnaire data \& interview transcripts, participants reported that they found the PR scenario to be both more enjoyable \& more rewarding than the traditional scenario, despite the decreased usability \& comfort effected by the requirement to don \& carry a satchel of hardware \& hold devices in both hands. The PR scenario was reported as allowing easier comparison \& contrast between RW \& VR environments, leading to recognising more differences between the two environments \& a greater change in \& better understanding of the chapel than with the traditional scenario. The visual acuity afforded by the cameras \& both the accuracy \& lag of the IPS surfaced as the major detractors to the experience of the PR scenario.
+In general, participant reactions to the Mirrorshades platform met the hypotheses. From the questionnaire data \& interview transcripts, participants reported that they found the PR scenario to be both more enjoyable \& more rewarding than the traditional scenario, despite the decreased usability \& comfort effected by the requirement to don \& carry a satchel of hardware \& hold devices in both hands. The PR scenario was reported as allowing easier comparison \& contrast between RW \& VR environments, leading to recognising more differences between the two environments \& a greater change in \& better understanding of the chapel than with the traditional scenario. The visual acuity afforded by the cameras \& both the accuracy \& lag of the IPS surfaced as the major detractors to the experience of the PR scenario.
 
 From the log data, participants displayed restricted head movement throughout the PR scenario, looking to their sides \& above \& beneath themselves less when experiencing the VR chapel in the PR scenario than when experiencing the VR chapel in the traditional scenario. However this restriction does not appear to have been so great that it reduced the utility \& enjoyability of the PR scenario to beneath that of the traditional scenario.
 
