--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -258,6 +258,8 @@ With regards to movement in the PR scenario, the accuracy \& especially the lag 
 
 For the traditional scenario log data were recorded while each participant was engaging with the VR chapel, in a seated position \& using the Xbox controller to navigate the VR environment. For the PR scenario log data were recorded throughout the whole scenario, such that data are available for both the periods in which participants were observing the RW chapel via the DK1 \& cameras in addition to the periods in which participants were observing the VR chapel. As such, several comparisons can be made between these data. Within the PR scenario, comparisons can be made between the periods that participants were observing RW \& the periods that participants were observing VR. Between the traditional scenario \& the PR scenario, comparisons can be made between the VR section of the traditional scenario \& the periods that participants were observing VR in the PR scenario. Log data were not captured for participant 2, nor were they captured for the traditional scenario for participant 5.
 
+\subsubsection{Comparing traditional \& PR scenarios}
+
 When looking at either scenario's data (the VR section of the traditional scenario \& both RW \& VR periods of the PR scenario) it is immediately evident that participants looked to their sides \& turned their heads horizontally (yaw) far more than they looked above \& beneath themselves by tilting their heads vertically (pitch). This relationship is shown in figures \ref{1_pitch_yaw_2up.png}, \ref{4_pitch_yaw_2up.png} \& \ref{6_pitch_yaw_2up.png}, which show pitch \& yaw plotted against time for both the traditional scenario \& the PR scenario, for participants 1, 4 \& 6 respectively. With the traditional scenario on the left of each pair of plots \& the PR scenario on the right, the displacement of the blue line representing yaw is substantially greater in both than the displacement of the red line representing yaw.
 
 \begin{figure}
@@ -357,6 +359,32 @@ This relationship is reflected calculating the standard deviation in pitch \& ya
 \end{minipage}
 \end{center}
 \end{table}
+
+%=====================
+
+When studying plots of head pitch \& yaw against time aligned with plots of distance moved against time, some participants display an aversion to large head movements while moving. Considering participant 1 (figure \ref{1_4up.png}), they seem to have been quite comfortable looking around a lot even while moving in the traditional scenario, while in the PR scenario their large head movements are close to the periods in which their position was not changing as much\footnote{When looking at these plots it is important to appreciate that lag in the IndoorAtlas data results in a small lateral offset between the position data \& the head orientation data, as the latter is unaffected by the lag in the correct reporting \& `settling' of the former.}. When looking at the same data plotted for participant 3 however (figure \ref{3_4up.png}), it seems that they were reluctant to perform large head movements while moving in both scenarios, rather than just the PR scenario.
+
+\begin{figure}
+	\begin{center}
+	\includegraphics[width=\textwidth]{1/1_4up.png}
+	\caption{Pitch \& yaw against time, aligned with distance moved against time, for participant 1 in both scenarios.}
+	\label{1_4up.png}
+	\end{center}
+\end{figure}
+
+\begin{figure}
+	\begin{center}
+	\includegraphics[width=\textwidth]{1/3_4up.png}
+	\caption{Pitch \& yaw against time, aligned with distance moved against time, for participant 3 in both scenarios.}
+	\label{3_4up.png}
+	\end{center}
+\end{figure}
+
+Reluctance to changing head orientation when moving in the traditional scenario can be explained by something as simple as participant 1 having more experience with video games that present the user with a `first person' perspective in which movement \& looking direction are controlled independently. For somebody familiar with this style of control, it is second nature to use one control to change their position whilst simultaneously using another control to change the direction in which they are looking, however for those unfamiliar or inexperienced with such scenarios it is common to observe alternation between movement \& looking, something that the OVW group has observed in people interacting with our content at various demonstrations using keyboard \& mouse, Xbox controller \& other control methodologies. For first person shooter (FPS) video games, this is commonly achieved by using keyboard buttons to control movement while using a mouse to control looking direction. With the traditional scenario, the Xbox controller provides control over movement while the head tracker in the DK1 provides control over looking direction by tracking head orientation.
+
+Reluctance to changing head orientation when moving in the PR scenario is most logically explained by participants feeling as though with the reduced visual acuity of their RW environment \& the discrepancy in position \& environmental objects of their VR environment that they needed to pay more conscious attention to their walking.
+
+\subsubsection{Comparing RW \& VR periods within PR scenario}
 
 When comparing pitch \& yaw data between the RW \& VR periods within the PR scenario, it is notable that for some participants there was more variance in the periods in which they were perceiving VR stimuli than in those in which they were perceiving RW stimuli, meaning that they turned their head more when looking at the VR environment than when looking at the RW environment. This is particularly evident when plotting these pitch \& yaw data against time with the RW/VR visuals indicated. Figure \ref{1_pitch_yaw.png} shows the pitch \& yaw data for participant 1 during the PR scenario, who prominently displayed this tendency toward greater head movement while viewing VR than RW. The coloured background of the plot indicates which environment the participant was perceiving at that time index; blue for RW \& green for VR. There is evident correlation to be seen between the most pronounced changes in yaw (red line) \& the periods that the participant was observing VR stimuli (green background).
 
@@ -460,37 +488,13 @@ Calculating the mean standard deviation in yaw for both RW \& VR periods, weight
 \end{center}
 \end{table}
 
+Also, when considering the amount of time spent perceiving each environment in the PR scenario, several of the participants showed frequent transitioning behaviour, where they would perform many transitions \& remain perceiving the visual stimuli from each environment for only a few seconds: for participants 1, 4 \& 6, the mean times for both RW \& VR periods are all between 1.68 \& 3.4 seconds. Participant 3 spent longer perceiving each environment with a RW mean of 18.2 seconds \& a VR mean of 7 seconds. The outlier is participant 5, with a RW mean of 31.8 seconds \& a VR mean of 3.6 seconds; this was the participant who found it uncomfortable to walk while wearing the DK1, so a much longer amount of time spent perceiving RW stimuli is understandable.
+
+\subsubsection{Comparing VR periods of PR scenario to VR section of traditional scenario}
+
 Furthermore, comparing yaw from the VR periods of the PR scenario (table \ref{sdyawtab}) against yaw from the traditional scenario (table \ref{sdpitchyawtrad}) it can be seen that in most cases there is a noticeably less yaw change in the VR periods of the PR scenario than in the traditional scenario, leading to the conclusion that participants felt more comfortable to perform larger head movements when seated with the DK1 than when standing/walking with the DK1. Observations of participants while they performed the traditional scenario support this with several participants twisting their heads right around to look behind them without changing their direction of their virtual `movement', while when walking in the PR scenario they tended to largely look ahead \& perform larger orientation changes by instead turning their whole body to begin walking in the return direction.
 
 Further comparing head movements between the VR section of the traditional scenario \& the VR periods of the PR scenario, the difference between the magnitude of pitch \& yaw is greater in the VR section of the traditional scenario than in the VR periods of the PR scenario. Comparing these values from tables \ref{sdpitchyawtrad}, \ref{sdpitchyawpr} \& \ref{sdpitchyawtrad} this difference exhibits as smaller variance in yaw \& roughly unchanged (only slight increased) variance in pitch for the VR periods of the PR scenario, further indicating that participants were more comfortable to look around themselves more freely in the traditional scenario than the PR scenario, leading to less overall head movement in the PR scenario than the traditional scenario.
-
-%=====================
-
-When studying plots of head pitch \& yaw against time aligned with plots of distance moved against time, some participants display an aversion to large head movements while moving. Considering participant 1 (figure \ref{1_4up.png}), they seem to have been quite comfortable looking around a lot even while moving in the traditional scenario, while in the PR scenario their large head movements are close to the periods in which their position was not changing as much\footnote{When looking at these plots it is important to appreciate that lag in the IndoorAtlas data results in a small lateral offset between the position data \& the head orientation data, as the latter is unaffected by the lag in the correct reporting \& `settling' of the former.}. When looking at the same data plotted for participant 3 however (figure \ref{3_4up.png}), it seems that they were reluctant to perform large head movements while moving in both scenarios, rather than just the PR scenario.
-
-\begin{figure}
-	\begin{center}
-	\includegraphics[width=\textwidth]{1/1_4up.png}
-	\caption{Pitch \& yaw against time, aligned with distance moved against time, for participant 1 in both scenarios.}
-	\label{1_4up.png}
-	\end{center}
-\end{figure}
-
-\begin{figure}
-	\begin{center}
-	\includegraphics[width=\textwidth]{1/3_4up.png}
-	\caption{Pitch \& yaw against time, aligned with distance moved against time, for participant 3 in both scenarios.}
-	\label{3_4up.png}
-	\end{center}
-\end{figure}
-
-Reluctance to changing head orientation when moving in the traditional scenario can be explained by something as simple as participant 1 having more experience with video games that present the user with a `first person' perspective in which movement \& looking direction are controlled independently. For somebody familiar with this style of control, it is second nature to use one control to change their position whilst simultaneously using another control to change the direction in which they are looking, however for those unfamiliar or inexperienced with such scenarios it is common to observe alternation between movement \& looking, something that the OVW group has observed in people interacting with our content at various demonstrations using keyboard \& mouse, Xbox controller \& other control methodologies. For first person shooter (FPS) video games, this is commonly achieved by using keyboard buttons to control movement while using a mouse to control looking direction. With the traditional scenario, the Xbox controller provides control over movement while the head tracker in the DK1 provides control over looking direction by tracking head orientation.
-
-Reluctance to changing head orientation when moving in the PR scenario is most logically explained by participants feeling as though with the reduced visual acuity of their RW environment \& the discrepancy in position \& environmental objects of their VR environment that they needed to pay more conscious attention to their walking.
-
-%=====================
-
-Finally, when considering the amount of time spent perceiving each environment in the PR scenario, several of the participants showed frequent transitioning behaviour, where they would perform many transitions \& remain perceiving the visual stimuli from each environment for only a few seconds: for participants 1, 4 \& 6, the mean times for both RW \& VR periods are all between 1.68 \& 3.4 seconds. Participant 3 spent longer perceiving each environment with a RW mean of 18.2 seconds \& a VR mean of 7 seconds. The outlier is participant 5, with a RW mean of 31.8 seconds \& a VR mean of 3.6 seconds; this was the participant who found it uncomfortable to walk while wearing the DK1, so a much longer amount of time spent perceiving RW stimuli is understandable.
 
 %=========================================================================================================
 
@@ -514,7 +518,13 @@ Through this first stage of evaluation the Mirrorshades platform has shown itsel
 
 \section{Stage 2 - Informing PR Implementation}
 
-\subsection{Evaluation}
+The first stage of evaluation into the Mirrorshades platform led to the conclusion that applying a mobile PR system to cultural heritage provides an experience that is more enjoyable \& engaging than a traditional virtual heritage scenario making use of immersive VR presentation, while also leading to greater understanding of the relationships between the RW \& VR content. However despite these benefits, the Mirrorshades platform is far from perfect. While certain drawbacks inherent in the system, such as the visual acuity of the video see-through solution \& the lag in the IPS, could not be iterated upon due to lack of suitable technology, other aspects of the system that affect the overall PR experience could be investigated - namely the way that transitions between RW \& VR visual stimuli are performed, including whether the default view is 100\% RW or a mix of RW \& VR.
+
+Stage 2 of the evaluation was divided into two parts. In the first (stage 2.1), evaluation focussed upon assessing participants' reactions to \& preferences toward three different transition styles, while in the second (stage 2.2), evaluation looked at reactions \& preferences in response to two different default views comprising RW/VR mixes. In terms of the combined Milgram/Waterworh model, this second stage of evaluation pertains to assessing the effect upon participants' focus \& sensus when performing oscillations along the locus axis using different techniques. Stage 2.1 investigates oscillations between the RW extreme of the locus axis \& other points upon the locus axis (such as in figure \ref{transition-rw-vr-hard.png}) while stage 2.2 looks into oscillations that are limited in terms of how far toward the RW extremum of the locus axis the participant can reach (such as in figure \ref{transition-mix-vr.png}).
+
+%=========================================================================================================
+
+\subsection{Evaluation Techniques}
 
 Evaluating users' preferences toward different methods of transitioning between visual stimuli in different situations pertains to studying their reactions \& responses to ascertain the effect upon their focus of attention, concepts which are largely psychological in nature \& highly subjective~\cite{Ijsselsteijn2001}. Thus, subjective measures will produce the bulk of the data for evaluation. However, objective data will also be collected \& cross referenced with the subjective data in attempts to support or contradict any relationships that are identified.
 
